--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,14 @@
                 </li>
             </ul>
             <div>
-        <img src="images/haeckel.jpg" alt="Logo">
+        <img src="/images/haeckel.jpg" alt="Logo">
+        <ul>
+          {% for post in site.posts %}
+            <li>
+              <a href="{{ post.url }}">{{ post.title }}</a>
+            </li>
+          {% endfor %}
+        </ul>
     </div>
         </div>
         <div class='span9'>
