--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,11 +1,11 @@
-/*body {
+body {
   margin: 0;
   font-family: 'Droid Serif', serif;
   font-size: 13px;
   font-weight: normal;
   line-height: 18px;
   color: #404040;
-}*/
+}
 
 a, h1, h2
 {
