--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
 <meta name="description" content="Stephen Zweibel, Librarian">
 <meta name="author" content="SZ">
 <title>Stephen Zweibel</title>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/css/bootstrap-combined.min.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
 <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
@@ -38,7 +39,7 @@
                 </li>
             </ul>
             <div>
-        <img src="/images/haeckel.jpg" alt="Logo">
+        <img src="/images/me.jpg" alt="Logo">
         <ul>
           {% for post in site.posts %}
             <li>
