--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
                 </li>
             </ul>
             <div>
-        <img src="/images/me.jpg" alt="Logo">
+        <img src="/images/me.jpg" alt="Logo" height="42" width="42">
         <ul>
           {% for post in site.posts %}
             <li>
