--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
                 <a href="/about.html">C.V.</a>
             </li>
         </ul>
-        <a href="#" class="thumbnail">
+        <a href="#" class="thumbnail hidden-tablet">
           <img data-src="images/me.jpg" alt="...">
         </a>
     <div class="row">
