--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,9 +38,7 @@
                 <a href="/about.html">C.V.</a>
             </li>
         </ul>
-        <a href="#" class="thumbnail">
-          <img data-src="images/me.jpg" alt="...">
-        </a>
+          <img data-src="images/me.jpg" alt="..." class='img-circle'>
     <div class="row">
       <ul>
         {% for post in site.posts %}
