--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
                 <a href="/about.html">C.V.</a>
             </li>
         </ul>
-          <img data-src="images/me.jpg" alt="..." class='img-circle'>
+          <img src="images/me.jpg" class='img-circle'>
     <div class="row">
       <ul>
         {% for post in site.posts %}
