--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
                 <a href="/about.html">C.V.</a>
             </li>
         </ul>
-          <img src="images/me.jpg" class='img-circle'>
+          <img class='thumbnail' alt="Me" style="width: 160px; height: 120px;" src="images/me.jpg">
     <div class="row">
       <ul>
         {% for post in site.posts %}
