--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,9 @@
                 <a href="/about.html">C.V.</a>
             </li>
         </ul>
+        <div class="row text-center">
           <img class='thumbnail' alt="Me" style="width: 160px; height: 120px;" src="images/me.jpg">
+        </div>
     <div class="row">
       <ul>
         {% for post in site.posts %}
