--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,10 @@
 <title>Stephen Zweibel</title>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/css/bootstrap-combined.min.css" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
+<!-- <link rel="stylesheet" type="text/css" href="/stylesheets/style.css"> -->
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
 <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/js/bootstrap.min.js"></script>
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="javascripts/bootstrap-tooltip.js"></script>
 <script type="text/javascript">
                       $(document).ready(function () {
@@ -22,9 +23,9 @@
 </script>
 </head>
 <body>
-<div class="container-fluid">
-    <div class='row-fluid'>
-    <div class='span3'>
+<div class="container">
+    <div class='row'>
+    <div class='col-md-3'>
         <ul class="nav nav-tabs nav-stacked">
             <li>
                 <h1>
@@ -41,7 +42,7 @@
         <div class="row text-center">
           <img class='thumbnail' alt="Me" style="width: 160px; height: 120px;" src="images/me.jpg">
         </div>
-    <div class="row">
+      <div class="row">
       <ul>
         {% for post in site.posts %}
           <li>
@@ -49,8 +50,8 @@
           </li>
         {% endfor %}
       </ul>
+      </div>
     </div>
-        </div>
     <div class='span9'>
         {{content}}
     </div>
