--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
       </ul>
       </div>
     </div>
-    <div class='span9'>
+    <div class='col-md-9'>
         {{content}}
     </div>
     </div>
