--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,10 +39,10 @@
                 <a href="/about.html">C.V.</a>
             </li>
         </ul>
-        <div class="row text-center">
+        <div class="text-center">
           <img class='thumbnail' alt="Me" style="width: 160px; height: 120px;" src="images/me.jpg">
         </div>
-      <div class="row">
+      <div>
       <ul>
         {% for post in site.posts %}
           <li>
