--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,8 +24,8 @@
 </head>
 <body>
 <div class="container">
-    <!-- <div class='row'> -->
-    <div class='col-md-3'>
+    <div class='row'>
+    <div class="col-md-1">
         <ul class="nav nav-tabs nav-stacked">
             <li>
                 <h1>
@@ -55,7 +55,7 @@
     <div class='col-md-9'>
         {{content}}
     </div>
-    <!-- </div> -->
+    </div>
 </div>
 </body>
 </html>
