--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,8 +39,8 @@
                 <a href="/about.html">C.V.</a>
             </li>
         </ul>
-        <div class="text-center">
-          <img class='thumbnail' alt="Me" style="width: 160px; height: 120px;" src="images/me.jpg">
+        <div class="center-block">
+          <img class='thumbnail' alt="Me" style="width: 160px; height: 160px;"  class="img-rounded" src="images/me.jpg">
         </div>
       <div>
       <ul>
