--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,8 +39,13 @@
                 <a href="/about.html">C.V.</a>
             </li>
         </ul>
-        <div class="center-block">
-          <img class='thumbnail' alt="Me" style="width: 160px; height: 160px;"  class="img-rounded" src="images/me.jpg">
+        <!-- <div class="center-block">
+          <img class='thumbnail img-rounded' alt="Me" style="width: 160px; height: 120px;" src="images/me.jpg">
+        </div> -->
+        <div class="col-xs-6 col-md-3">
+          <a href="#" class="thumbnail">
+            <img data-src="images/me.jpg" alt="Me">
+          </a>
         </div>
       <div>
       <ul>
