--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
         </div> -->
         <div class="col-xs-6 col-md-3">
           <a href="#" class="thumbnail">
-            <img data-src="images/me.jpg" alt="Me">
+            <img src="images/me.jpg" alt="Me">
           </a>
         </div>
       <div>
