--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,16 +26,16 @@
 <div class="container">
     <div class='row'>
     <div class="col-md-3">
-        <ul class="nav nav-tabs nav-stacked">
-            <li>
+        <ul class="list-group">
+            <li class='list-group-item'>
                 <h1>
                     <a href="/">Stephen Zweibel</a>
                 </h1>
             </li>
-            <li class=''>
+            <li class='list-group-item'>
                 <a href="/projects.html">Papers, Presentations, & Projects</a>
             </li>
-            <li class=''>
+            <li class='list-group-item'>
                 <a href="/about.html">C.V.</a>
             </li>
         </ul>
