--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,19 +26,13 @@
 <div class="container">
     <div class='row'>
     <div class="col-md-3">
-        <ul class="list-group">
-            <li class='list-group-item'>
-                <h1>
-                    <a href="/">Stephen Zweibel</a>
-                </h1>
-            </li>
-            <li class='list-group-item'>
-                <a href="/projects.html">Papers, Presentations, & Projects</a>
-            </li>
-            <li class='list-group-item'>
-                <a href="/about.html">C.V.</a>
-            </li>
-        </ul>
+        <div class="list-group">
+          <h1>
+              <a class='list-group-item' href="/">Stephen Zweibel</a>
+          </h1>
+          <a class='list-group-item' href="/projects.html">Papers, Presentations, & Projects</a>
+          <a class='list-group-item' href="/about.html">C.V.</a>
+        </div>
         <!-- <div class="center-block">
           <img class='thumbnail img-rounded' alt="Me" style="width: 160px; height: 120px;" src="images/me.jpg">
         </div> -->
