--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,9 +28,9 @@
     <div class="col-md-3">
         <div class="list-group">
           <h1>
-              <a class='list-group-item' href="/">Stephen Zweibel</a>
-          <a href="#" class="thumbnail">
-            <img src="images/me.jpg" alt="Me">
+              <a class='list-group-item' href="/">Stephen Zweibel
+            <img src="images/me.jpg" class='thumbnail' alt="Me">
+            Reference librarian doing work in Emerging Technologies at Hunter College, CUNY
           </a>
           </h1>
           <a class='list-group-item' href="/projects.html">Papers, Presentations, & Projects</a>
