--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,9 +29,10 @@
         <div class="list-group">
           <h1>
               <a class='list-group-item' href="/">Stephen Zweibel
-            <img src="images/me.jpg" class='thumbnail' alt="Me">
-            Reference librarian doing work in Emerging Technologies at Hunter College, CUNY
+          <a href="#" class="thumbnail">
+            <img src="images/me.jpg" alt="Me">
           </a>
+        </a>
           </h1>
           <a class='list-group-item' href="/projects.html">Papers, Presentations, & Projects</a>
           <a class='list-group-item' href="/about.html">C.V.</a>
