--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,11 +29,12 @@
         <div class="list-group">
           <h1>
               <a class='list-group-item' href="/">Stephen Zweibel
+          </h1>
           <a href="#" class="thumbnail">
             <img src="images/me.jpg" alt="Me">
+            Reference librarian doing work in Emerging Technologies at Hunter College, CUNY
           </a>
         </a>
-          </h1>
           <a class='list-group-item' href="/projects.html">Papers, Presentations, & Projects</a>
           <a class='list-group-item' href="/about.html">C.V.</a>
         </div>
