--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,14 +27,18 @@
     <div class='row'>
     <div class="col-md-3">
         <div class="list-group">
-          <h1>
+          <!-- <h1>
               <a class='list-group-item' href="/">Stephen Zweibel
-          </h1>
-          <a href="#" class="thumbnail">
-            <img src="images/me.jpg" alt="Me">
-            Reference librarian doing work in Emerging Technologies at Hunter College, CUNY
+          </h1> -->
+          <a class='list-group-item' href="/">
+            <div class="thumbnail">
+              <img src="images/me.jpg" alt="Me">
+              <div class="caption">
+                <h3>Stephen Zweibel</h3>
+                <p>Reference librarian doing work in Emerging Technologies at Hunter College, CUNY</p>
+              </div>
+            </div>
           </a>
-        </a>
           <a class='list-group-item' href="/projects.html">Papers, Presentations, & Projects</a>
           <a class='list-group-item' href="/about.html">C.V.</a>
         </div>
