--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,13 +30,13 @@
           <!-- <h1>
               <a class='list-group-item' href="/">Stephen Zweibel
           </h1> -->
-          <a class='list-group-item' href="/">
-            <div class="thumbnail">
+          <a class='thumbnail list-group-item' href="/">
+            <!-- <div> -->
               <img src="images/me.jpg" alt="Me">
               <div class="caption">
                 <h3>Stephen Zweibel</h3>
-                <p>Reference librarian doing work in Emerging Technologies at Hunter College, CUNY</p>
-              </div>
+                <p>Reference librarian doing work in emerging technologies at Hunter College, CUNY</p>
+              <!-- </div> -->
             </div>
           </a>
           <a class='list-group-item' href="/projects.html">Papers, Presentations, & Projects</a>
