--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
           </h1> -->
           <a class='thumbnail list-group-item' href="/">
             <!-- <div> -->
-              <img src="images/me.jpg" alt="Me">
+              <img src="/images/me.jpg" alt="Me">
               <div class="caption">
                 <h3>Stephen Zweibel</h3>
                 <p>Reference librarian doing work in emerging technologies at Hunter College, CUNY</p>
