--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,8 @@
               <!-- </div> -->
             </div>
           </a>
-          <a class='list-group-item' href="/projects.html">Papers, Presentations, & Projects</a>
+          <a class='list-group-item' href="/projects.html">Projects</a>
+          <a class='list-group-item' href="/presentations.html">Presentations</a>
           <a class='list-group-item' href="/about.html">C.V.</a>
         </div>
         <!-- <div class="center-block">
