--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
 <div class="container">
     <div class='row'>
     <div class="col-md-3">
-        <div class="list-group">
+        <div class="list-group" style='background-color: blue'>
           <!-- <h1>
               <a class='list-group-item' href="/">Stephen Zweibel
           </h1> -->
@@ -41,7 +41,7 @@
           </a>
           <a class='list-group-item' href="/projects.html">Projects</a>
           <a class='list-group-item' href="/presentations.html">Presentations</a>
-          <a class='list-group-item' href="/about.html">C.V.</a>
+          <a class='list-group-item' href="/about.html">Curriculum Vitae</a>
         </div>
         <!-- <div class="center-block">
           <img class='thumbnail img-rounded' alt="Me" style="width: 160px; height: 120px;" src="images/me.jpg">
