--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,9 +39,9 @@
               <!-- </div> -->
             </div>
           </a>
-          <a class='list-group-item' href="/projects.html">Projects</a>
+          <h3><a class='list-group-item' href="/projects.html">Projects</a>
           <a class='list-group-item' href="/presentations.html">Presentations</a>
-          <a class='list-group-item' href="/about.html">Curriculum Vitae</a>
+          <a class='list-group-item' href="/about.html">Curriculum Vitae</a></h3>
         </div>
         <!-- <div class="center-block">
           <img class='thumbnail img-rounded' alt="Me" style="width: 160px; height: 120px;" src="images/me.jpg">
