--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
 <div class="container">
     <div class='row'>
     <div class="col-md-3">
-        <div class="list-group" style='background-color: blue'>
+        <div class="list-group">
           <!-- <h1>
               <a class='list-group-item' href="/">Stephen Zweibel
           </h1> -->
@@ -39,9 +39,9 @@
               <!-- </div> -->
             </div>
           </a>
-          <h3><a class='list-group-item' href="/projects.html">Projects</a>
-          <a class='list-group-item' href="/presentations.html">Presentations</a>
-          <a class='list-group-item' href="/about.html">Curriculum Vitae</a></h3>
+          <a class='list-group-item' href="/projects.html"><h3>Projects</h3></a>
+          <a class='list-group-item' href="/presentations.html"><h3>Presentations</h3></a>
+          <a class='list-group-item' href="/about.html"><h3>Curriculum Vitae</h3></a>
         </div>
         <!-- <div class="center-block">
           <img class='thumbnail img-rounded' alt="Me" style="width: 160px; height: 120px;" src="images/me.jpg">
