--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,26 +7,15 @@
 <title>Stephen Zweibel</title>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
-<!-- <link rel="stylesheet" type="text/css" href="/stylesheets/style.css"> -->
-<!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css"> -->
+<link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
 <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="javascripts/bootstrap-tooltip.js"></script>
-<script type="text/javascript">
-                      $(document).ready(function () {
-                          $("[rel=tooltip]").tooltip();
-                          $("[rel=tooltip1]").tooltip({placement:'right'});
-                          $("[rel=tooltip2]").tooltip({placement:'left'});
-                          $("[rel=tooltip3]").tooltip({placement:'bottom'});
-
-                       });
-</script>
 </head>
 <body>
 <div class="container">
     <div class='row'>
     <div class="col-md-3">
-        <div class="list-group">
+        <div class="list-group ">
           <!-- <h1>
               <a class='list-group-item' href="/">Stephen Zweibel
           </h1> -->
