--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,28 +1,7 @@
-body {
-  font-family: 'Open Sans', sans-serif;
+A.thumbnail.list-group-item, A.list-group-item {
+    background: #E9AC8A
 }
 
-a, h1, h2
-{
-	color: #000000;
+body{
+    background: #555555;
 }
-a
-{
-  text-decoration: underline;
-}
-h1>a
-{
-  text-decoration: none;
-}
-/*h1.head
-{
-    font-weight: normal;
-}
-
-.header
-{
-	margin: 0;
-	padding: 0.3em;
-	background: #fafafa;
-	border-bottom: 1px solid #000000;
-}*/
