--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,38 +16,23 @@
     <div class='row'>
     <div class="col-md-3">
         <div class="list-group ">
-          <!-- <h1>
-              <a class='list-group-item' href="/">Stephen Zweibel
-          </h1> -->
           <a class='thumbnail list-group-item' href="/">
-            <!-- <div> -->
               <img src="/images/me.jpg" alt="Me">
               <div class="caption">
                 <h3>Stephen Zweibel</h3>
                 <p>Reference librarian doing work in emerging technologies at Hunter College, CUNY</p>
-              <!-- </div> -->
             </div>
           </a>
           <a class='list-group-item' href="/projects.html"><h4>Projects</h4></a>
           <a class='list-group-item' href="/presentations.html"><h4>Presentations</h4></a>
           <a class='list-group-item' href="/about.html"><h4>Curriculum Vitae</h4></a>
+          <a class='list-group-item' href="/"><h4>Blog</h4></a>
         </div>
-        <!-- <div class="center-block">
-          <img class='thumbnail img-rounded' alt="Me" style="width: 160px; height: 120px;" src="images/me.jpg">
-        </div> -->
         <div class="col-xs-6 col-md-3">
         </div>
-      <div>
-      <ul>
-        {% for post in site.posts %}
-          <li>
-            <a href="{{ post.url }}">{{ post.title }}</a>
-          </li>
-        {% endfor %}
-      </ul>
-      </div>
     </div>
     <div class='col-md-9'>
+      <h2>{{page.title}}</h2>
         {{content}}
     </div>
     </div>
