--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -4,5 +4,5 @@ A.thumbnail.list-group-item, A.list-group-item {
 
 body{
     /*background: #E0E0E0;*/
-    background-image:url(/images/squared_metal.png); background-repeat:repeat
+    background-image:url(/images/lghtmesh.png); background-repeat:repeat
 }
