--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
               <div class="caption">
                 <h3>Stephen Zweibel</h3>
                 <p>Reference librarian doing work in emerging technologies at Hunter College, CUNY</p>
+                <p>@<a href="https://twitter.com/stevezweibel">stevezweibel</a></p>
             </div>
           </a>
           <a class='list-group-item' href="/projects.html"><h4>Projects</h4></a>
