--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,7 @@
 <div class="container">
     <div class='row'>
     <div class="col-md-3">
-        <div class="list-group ">
-          <a class='thumbnail list-group-item' href="/">
+          <a class='thumbnail' href="/">
               <img src="/images/me2.jpg" alt="Me">
               <div class="caption">
                 <h3>Stephen Zweibel</h3>
@@ -24,6 +23,7 @@
                 <p>@<a href="https://twitter.com/stevezweibel">stevezweibel</a></p>
             </div>
           </a>
+        <div class="list-group ">
           <a class='list-group-item' href="/projects.html"><h4>Projects</h4></a>
           <a class='list-group-item' href="/presentations.html"><h4>Presentations</h4></a>
           <a class='list-group-item' href="/about.html"><h4>Curriculum Vitae</h4></a>
