--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,15 +15,15 @@
 <div class="container">
     <div class='row'>
     <div class="col-md-3">
-          <a class='thumbnail' href="/">
+        <div class="list-group ">
+          <a class='thumbnail list-group-item' href="/">
               <img src="/images/me2.jpg" alt="Me">
               <div class="caption">
                 <h3>Stephen Zweibel</h3>
                 <p>Reference librarian doing work in emerging technologies at Hunter College, CUNY</p>
-                <p>@<a href="https://twitter.com/stevezweibel">stevezweibel</a></p>
+                <!-- <p>@<a href="https://twitter.com/stevezweibel">stevezweibel</a></p> -->
             </div>
           </a>
-        <div class="list-group ">
           <a class='list-group-item' href="/projects.html"><h4>Projects</h4></a>
           <a class='list-group-item' href="/presentations.html"><h4>Presentations</h4></a>
           <a class='list-group-item' href="/about.html"><h4>Curriculum Vitae</h4></a>
