--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,8 @@
               <img src="/images/me2.jpg" alt="Me">
               <div class="caption">
                 <h3>Stephen Zweibel</h3>
-                <p>Reference librarian doing work in emerging technologies at Hunter College, CUNY</p>
+                <p>Reference librarian doing work in emerging technologies at Hunter College, CUNY <br/>@stevezweibel<br/>
+szweibel@hunter.cuny.edu</p>
                 <!-- <p>@<a href="https://twitter.com/stevezweibel">stevezweibel</a></p> -->
             </div>
           </a>
