--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <div class="col-md-3">
         <div class="list-group ">
           <div class='thumbnail list-group-item' href="/">
-              <img src="/images/me2.jpg" alt="Me">
+              <img src="/images/SteveProfile.jpeg" class='img-circle' alt="Me">
               <div class="caption">
                 <h3>Stephen Zweibel</h3>
                 <p>Reference librarian doing work in emerging technologies at Hunter College, CUNY <br/><a href="http://twitter.com/stevezweibel">@stevezweibel</a><br/>
