--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,8 @@
           <div class='thumbnail list-group-item' href="/">
               <img src="/images/SteveProfile.jpeg" class='img-circle' style='max-width:200px; max-height:200px' alt="Me">
               <div class="caption">
-                <h3>Stephen Zweibel</h3>
-                <p>Reference librarian doing work in emerging technologies at Hunter College, CUNY <br/><a href="http://twitter.com/stevezweibel">@stevezweibel</a><br/>
+                <a href='/' style='text-decoration: none;'><h3>Stephen Zweibel</h3>
+                <p>Reference librarian doing work in emerging technologies at Hunter College, CUNY <br/></a><a href="http://twitter.com/stevezweibel">@stevezweibel</a><br/>
 szweibel@hunter.cuny.edu</p>
             </div>
           </div>
