--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <div class="col-md-3">
         <div class="list-group ">
           <div class='thumbnail list-group-item' href="/">
-              <img src="/images/SteveProfile.jpeg" class='img-circle' style='max-width:200px; max-height:200px' alt="Me">
+              <a href='/' style='text-decoration: none; color:black;'><img src="/images/SteveProfile.jpeg" class='img-circle' style='max-width:200px; max-height:200px' alt="Me">
               <div class="caption">
                 <h3>Stephen Zweibel</h3>
                 <p>Reference librarian doing work in emerging technologies at Hunter College, CUNY <br/></a><a href="http://twitter.com/stevezweibel">@stevezweibel</a><br/>
